arreglando aire vista mobile p1

--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -108,7 +108,7 @@
     <!-- descripcion discos, sencillos y ep -->
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 col-xs-12 mt-5 mb-5 bB">
+            <div class="col-lg-12 col-xs-12 mt-5 mb-5 ml-3 mr-3 bB">
                 <h3>#Anonimato</h3>
                 <div class="disco--grid">
                     <img class="rounded sombraCont contenido__img--border disco__img--grid img-fluid" src="../assets/discos y sencillos/Anonimato.jpg" alt="#Anonimato">
@@ -929,7 +929,7 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 col-xs-12 mt-5 mb-5 bB">
+            <div class="col-lg-12 col-xs-12 mt-5 mb-5 ml-3 mr-3 bB">
                 <h3>El Origen</h3>
                 <div class="disco--grid">
                     <img class="rounded sombraCont contenido__img--border disco__img--grid img-fluid" src="../assets/discos y sencillos/El Origen.jpg" alt="El Origen">
