agregando sombra en textos biografía

--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -71,7 +71,7 @@
         <div class="row">
             <div class="col-lg-8 col-xs-12 d-flex align-items-center">
                 <div class="mb-5 pb-3">
-                    <p class="pl-3 pr-5 biografia__parrafo--tyf">
+                    <p class="pl-3 pr-5 biografia__parrafo--tyf sombraTxt">
 	                    Agustín Cruz, más conocido por su nombre artístico Acru es un rapero originario de Argentina, nacido el 4 de junio de 1997, en Tucumán.<br>
 						<br>
 						Compitió tanto en las batallas underground como El Quinto Escalón y algunas otras de escenarios, y es considerado como uno de los mejores de la Argentina y el mejor argentino en cuánto a skills y métricas se debe.<br>
@@ -80,21 +80,21 @@
 					</p>
 				</div>
 			</div>
-			<div class="col-lg-4 col-xs-12 d-flex justify-content-center m-3">
+			<div class="col-lg-4 col-xs-12 d-flex justify-content-center p-5">
 				<img src="../assets/images/FOTO4.jpg" class="img-fluid sombraCont contenido__img--border">
 			</div>
 		<div class="col-lg-12 col-xs-12 mb-5 bB">
-				<h3 class="p-3 mt-5 biografia__sectionSubtitulo--tyf">Trayetoria</h3>
+				<h3 class="p-3 mt-5 biografia__sectionSubtitulo--tyf sombraTxt">Trayetoria</h3>
 
-					<h5 class="pl-3 pr-3 mt-1 biografia__subtitulo--tyf">2013 - 2014</h5>
-						<p class="p-3 pr-3 biografia__parrafo--tyf">
+					<h5 class="pl-3 pr-3 mt-1 biografia__subtitulo--tyf sombraTxt">2013 - 2014</h5>
+						<p class="p-3 pr-3 biografia__parrafo--tyf sombraTxt">
 							En 2013, Acru da sus primeros pasos en el mundo del freestyle y las batallas. Se anota a uno de sus primeros eventos en El Quinto Escalón, el cual gana derrotando a Arka en la final.<br>
 							<br>
 							Desde sus inicios, demostró habilidades que le hicieron destacar en la escena nacional, como las skills o coherencia, técnicas que eran muy dificiles de realizar en ese momento.<br>
 						</p>
 
-					<h5 class="pl-3 pr-3 mt-5 biografia__subtitulo--tyf">2015</h5>
-						<p class="pl-3 pr-3 biografia__parrafo--tyf">
+					<h5 class="pl-3 pr-3 mt-5 biografia__subtitulo--tyf sombraTxt">2015</h5>
+						<p class="pl-3 pr-3 biografia__parrafo--tyf sombraTxt">
 						En 2015, decide participar por primera vez en la Final Nacional de la Red Bull Batalla de los Gallos​ de Argentina. No tuvo una trayectoria muy larga en este evento, ya que fue eliminado por Wolf en octavos de final.<br>
 						<br>
 						La grave situación económica de sus padres hizo que Acru tuviera que ganar dinero de alguna forma para aportar a su familia. Por lo tanto, asistió a multitud de eventos durante esos años con la intención de ganarlos, ya que los ganadores (en ciertas competencias) obtenían dinero como recompensa.<br>
@@ -102,25 +102,25 @@
 						Acru fue recaudando dinero para ayudar a sus padres, hasta que un día les robaron y perdieron todo lo que habían recaudado. A raíz de esto, El Quinto Escalón organizó un evento benéfico para ayudar a Acru, en el que tanto competidores como espectadores hicieron donaciones para apoyar su causa.
 						</p>
 
-					<h5 class="pl-3 pr-3 mt-5 biografia__subtitulo--tyf">2016</h5>
-						<p class="pl-3 pr-3 biografia__parrafo--tyf">
+					<h5 class="pl-3 pr-3 mt-5 biografia__subtitulo--tyf sombraTxt">2016</h5>
+						<p class="pl-3 pr-3 biografia__parrafo--tyf sombraTxt">
 						En 2016, El Quinto Escalón estaba experimentando una masificación. La Final Nacional de 2016 se hizo en un escenario por primera vez, participando los mejores freestylers de la escena argenta, tanto del underground, como los de escenarios. En este torneo, Acru se enfrentó a Duki y Dam​ en octavos de final, a cuales derrotó sin problemas. En cuartos, derrotó a MKS, hasta que perdió con Wos en semifinales.
 						</p>
 
-					<h5 class="pl-3 pr-3 mt-5 biografia__subtitulo--tyf">2017</h5>
-						<p class="pl-3 pr-3 biografia__parrafo--tyf">
+					<h5 class="pl-3 pr-3 mt-5 biografia__subtitulo--tyf sombraTxt">2017</h5>
+						<p class="pl-3 pr-3 biografia__parrafo--tyf sombraTxt">
 						En la temporada de 2017, se hicieron 8 fechas con un torneo en cada una. 16 participantes compitieron en cada fecha para salir campeones, entre ellos, Agustín, que salió campeón de la 4ta Fecha tras ganar la final contra MKS.<br>
 						<br>
 						Después de estas 8 fechas, se llevó a cabo el evento final antes de la despedida del Quinto Escalón. Participaron 16 competidores, y aunque Acru no estaba presente entre ellos, dió un show al público cantando alguno de sus sencillos, y haciendo freestyle libre.
 						</p>
 
-					<h5 class="pl-3 pr-3 mt-5 biografia__subtitulo--tyf">2018</h5>
-						<p class="pl-3 pr-3 biografia__parrafo--tyf">
+					<h5 class="pl-3 pr-3 mt-5 biografia__subtitulo--tyf sombraTxt">2018</h5>
+						<p class="pl-3 pr-3 biografia__parrafo--tyf sombraTxt">
 						En 2018 participó en la God Level Fest 3vs3 Chile 2018. En este evento internacional, hizo equipo junto con Wos y Dtoke, representando al Team Argentina, y perdieron en primera ronda en contra del Team México, conformado por Aczino, Jony Beltrán, y Dominic.
 						</p>
 
-					<h5 class="pl-3 pr-3 mt-5 biografia__subtitulo--tyf">2020</h5>
-						<p class="pl-3 pr-3 biografia__parrafo--tyf">
+					<h5 class="pl-3 pr-3 mt-5 biografia__subtitulo--tyf sombraTxt">2020</h5>
+						<p class="pl-3 pr-3 biografia__parrafo--tyf sombraTxt">
 						Después de 2 años sin participar en ningún evento de batallas, Agustín decide enviar su prueba de selección para la Red Bull Batalla de los Gallos. Quedó seleccionado para participar en la Final Nacional de Argentina de 2020, que se celebraría el 21 de noviembre.<br>
 						<br>
 						Finalmente, llegaría la Final Nacional de Red Bull el 21 de noviembre​, y Acru perdió en contra del proveniente de Monte Grande, Tiago, en Octavos de Final, de una forma muy criticada, quedando eliminado de la competición.<br>
