--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -66,6 +66,35 @@
 		</div>		
 	</div>
 
+	<!-- formulario -->
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-6 col-xs-12 mt-5 mb-5">
+				<form>
+					<div class="col pb-3">
+						<label for="exampleFormControlInput1" class="formulario__label--tyf sombraTxt">Nombre</label>
+				      	<input type="text" class="form-control formulario__input--tyf">				      
+				    </div>
+				    <div class="col pb-3">
+				    	<label for="exampleFormControlInput1" class="formulario__label--tyf sombraTxt">Apellido</label>
+				      	<input type="text" class="form-control formulario__input--tyf">
+				    </div>
+				  	<div class="form-group pb-3">
+				    	<label for="exampleFormControlInput1" class="formulario__label--tyf sombraTxt">Email</label>
+				    	<input type="email" class="form-control formulario__input--tyf" id="exampleFormControlInput1" placeholder="name@example.com">
+				  	</div>				  				
+				  	<div class="form-group">
+				    	<label for="exampleFormControlTextarea1" class="formulario__label--tyf sombraTxt">Tu mensaje</label>
+				    	<textarea class="form-control formulario__input--tyf" id="exampleFormControlTextarea1" rows="10"></textarea>
+				  	</div>
+				</form>
+			</div>
+			<div class="col-lg-6 mt-5 mb-5 pl-5 d-flex align-items-center">
+				<img src="../assets/images/FOTO3.jpg" alt="" class="img-fluid sombraCont contenido__img--border">
+			</div>			
+		</div>
+	</div>
+
 	<!-- footer -->
 	<div class="container-fluid">
 		<div class="row">
