--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -83,10 +83,14 @@
 				    	<label for="exampleFormControlInput1" class="formulario__label--tyf sombraTxt">Email</label>
 				    	<input type="email" class="form-control formulario__input--tyf" id="exampleFormControlInput1" placeholder="name@example.com">
 				  	</div>				  				
-				  	<div class="form-group pl-3 pr-3">
+				  	<div class="form-group pb-3 pl-3 pr-3">
 				    	<label for="exampleFormControlTextarea1" class="formulario__label--tyf sombraTxt">Tu mensaje</label>
-				    	<textarea class="form-control formulario__input--tyf" id="exampleFormControlTextarea1" rows="10"></textarea>
-				  	</div>
+				    	<textarea class="form-control formulario__input--tyf" id="exampleFormControlTextarea1" rows="5"></textarea>
+				  	</div>								
+					<div class="d-flex justify-content-around">
+						<input class="btn formulario__btn--tyf" type="submit" value="Submit">
+						<input class="btn formulario__btn--tyf" type="reset" value="Reset">
+					</div>
 				</form>
 			</div>
 			<div class="col-lg-6 mt-5 mb-5 pl-3 pr-3">
