SHOWS, y retoques en BIO y CONTACTO

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -41,8 +41,7 @@
 				  </button>
 				  <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
 				    <div class="navbar-nav">
-				      <a class="active nav-link p-4 nav__pages--animacion" href="shows.html">Shows</a>
-				      <a class="nav-link p-4 nav__pages--animacion" href="shop.html">Shop</a>
+				      <a class="active nav-link p-4 nav__pages--animacion" href="shows.html">Shows</a>		      
 				      <a class="nav-link p-4 nav__pages--animacion" href="discografia.html">Discografía</a>
 				      <a class="nav-link p-4 nav__pages--animacion" href="biografia.html">Biografía</a>
 				      <a class="nav-link p-4 nav__pages--animacion" href="contacto.html">Contacto</a>
@@ -62,10 +61,82 @@
 				<p class="sombraTxt">			
 				Enterate de todas las fechas que se vienen.
 				</p>				
-			</div>			
+			</div>		
 		</div>		
 	</div>
 
+	<!-- section -->
+	<div class="container mt-5 p-3 shows__background rounded">
+		<div class="row d-flex justify-content-center align-items-center">
+			<div class="col-lg-5 col-xs-12">
+				<img src="../assets/shows/acru_salta960.png" class="img-fluid rounded">
+			</div>
+			<div class="col-lg-5 col-xs-12 pt-3">
+				<h3 class="shows__titulo--tyf sombraTxt">SALTA</h3>
+				<p class="sombraTxt">Sábado 18 de Septiembre<br>Teatro Fundación Salta</p>
+			</div>
+			<div class="col-lg-2 col-xs-12 pt-3 d-flex justify-content-center shows__entradas--animacion">
+				<a href="https://www.ticketek.com.ar/acru/teatro-fundacion" target="_blanck" class="p-3 shows__entradas--tyf rounded">ENTRADAS</a>
+			</div>
+		</div>
+	</div>
+	<div class="container mt-5 p-3 shows__background rounded">
+		<div class="row d-flex justify-content-center align-items-center">
+			<div class="col-lg-5 col-xs-12">
+				<img src="../assets/shows/acru_gc960.png" class="img-fluid rounded">
+			</div>
+			<div class="col-lg-5 col-xs-12 pt-3">
+				<h3 class="shows__titulo--tyf sombraTxt">MENDOZA</h3>
+				<p class="sombraTxt">Jueves 7 de Octubre<br>Teatro Plaza (Godoy Cruz)</p>
+			</div>
+			<div class="col-lg-2 col-xs-12 pt-3 d-flex justify-content-center">
+				<a href="https://www.ticketek.com.ar/acru/cine-teatro-plaza" target="_blanck" class="p-3 shows__entradas--tyf shows__entradas--animacion rounded">ENTRADAS</a>
+			</div>
+		</div>
+	</div>
+	<div class="container mt-5 p-3 shows__background rounded">
+		<div class="row d-flex justify-content-center align-items-center">
+			<div class="col-lg-5 col-xs-12">
+				<img src="../assets/shows/acru_sj960.png" class="img-fluid rounded">
+			</div>
+			<div class="col-lg-5 col-xs-12 pt-3">
+				<h3 class="shows__titulo--tyf sombraTxt">SAN JUAN</h3>
+				<p class="sombraTxt">Viernes 8 de Octubre<br>La Meseta</p>
+			</div>
+			<div class="col-lg-2 col-xs-12 pt-3 d-flex justify-content-center">
+				<a href="https://www.ticketek.com.ar/acru/la-meseta" target="_blanck" class="p-3 shows__entradas--tyf shows__entradas--animacion rounded">ENTRADAS</a>
+			</div>
+		</div>
+	</div>
+	<div class="container mt-5 p-3 shows__background rounded">
+		<div class="row d-flex justify-content-center align-items-center">
+			<div class="col-lg-5 col-xs-12">
+				<img src="../assets/shows/acru_sl960.png" class="img-fluid rounded">
+			</div>
+			<div class="col-lg-5 col-xs-12 pt-3">
+				<h3 class="shows__titulo--tyf sombraTxt">SAN LUIS</h3>
+				<p class="sombraTxt">Sábado 9 de Octubre<br>Tinglao</p>
+			</div>
+			<div class="col-lg-2 col-xs-12 pt-3 d-flex justify-content-center">
+				<a href="https://www.ticketek.com.ar/acru/tinglao-bar" target="_blanck" class="p-3 shows__entradas--tyf shows__entradas--animacion rounded">ENTRADAS</a>
+			</div>
+		</div>
+	</div>
+	<div class="container mt-5 mb-5 p-3 shows__background rounded">
+		<div class="row d-flex justify-content-center align-items-center">
+			<div class="col-lg-5 col-xs-12">
+				<img src="../assets/shows/acru_sluis960.png" class="img-fluid rounded">
+			</div>
+			<div class="col-lg-5 col-xs-12 pt-3">
+				<h3 class="shows__titulo--tyf sombraTxt">VILLA MERCEDES</h3>
+				<p class="sombraTxt">Domingo 10 de Octubre<br>Auditorio Morrison (San Luis)</p>
+			</div>
+			<div class="col-lg-2 col-xs-12 pt-3 d-flex justify-content-center">
+				<a href="https://www.ticketek.com.ar/acru/auditorio-morrison" target="_blanck" class="p-3 shows__entradas--tyf shows__entradas--animacion rounded">ENTRADAS</a>
+			</div>
+		</div>
+	</div>
+	
 	<!-- footer -->
 	<div class="container-fluid">
 		<div class="row">
