--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -41,8 +41,7 @@
 				  </button>
 				  <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
 				    <div class="navbar-nav">
-				      <a class="nav-link p-4 nav__pages--animacion" href="shows.html">Shows</a>
-				      <a class="nav-link p-4 nav__pages--animacion" href="shop.html">Shop</a>
+				      <a class="nav-link p-4 nav__pages--animacion" href="shows.html">Shows</a>				      
 				      <a class="nav-link p-4 nav__pages--animacion" href="discografia.html">Discografía</a>
 				      <a class="active nav-link p-4 nav__pages--animacion" href="biografia.html">Biografía</a>
 				      <a class="nav-link p-4 nav__pages--animacion" href="contacto.html">Contacto</a>
@@ -67,11 +66,11 @@
 	</div>
 
 	<!-- contenido -->
-	<div class="container mt-5">
-        <div class="row">
+	<div class="container mt-5 mb-5">
+        <div class="row biografia__background rounded">
             <div class="col-lg-8 col-xs-12 d-flex align-items-center">
-                <div class="mb-5 pb-3">
-                    <p class="pl-3 pr-5 biografia__parrafo--tyf sombraTxt">
+                <div>
+                    <p class="p-3 biografia__parrafo--tyf sombraTxt">
 	                    Agustín Cruz, más conocido por su nombre artístico Acru es un rapero originario de Argentina, nacido el 4 de junio de 1997, en Tucumán.<br>
 						<br>
 						Compitió tanto en las batallas underground como El Quinto Escalón y algunas otras de escenarios, y es considerado como uno de los mejores de la Argentina y el mejor argentino en cuánto a skills y métricas se debe.<br>
@@ -80,11 +79,16 @@
 					</p>
 				</div>
 			</div>
-			<div class="col-lg-4 col-xs-12 d-flex justify-content-center p-5">
-				<img src="../assets/images/FOTO4.jpg" class="img-fluid sombraCont contenido__img--border">
+			<div class="col-lg-4 col-xs-12 d-flex justify-content-center p-3">
+				<img src="../assets/images/FOTO4.jpg" class="img-fluid sombraCont contenido__img--border rounded" width="2300" height="auto">
 			</div>
-		<div class="col-lg-12 col-xs-12 mb-5 bB">
-				<h3 class="p-3 mt-5 biografia__sectionSubtitulo--tyf sombraTxt">Trayetoria</h3>
+		</div>
+	</div>
+		
+	<div class="container mb-5">
+		<div class="row biografia__background rounded">	
+			<div class="col-lg-12 col-xs-12 bB">
+				<h3 class="p-3 biografia__sectionSubtitulo--tyf sombraTxt">Trayectoria</h3>
 
 					<h5 class="pl-3 pr-3 mt-1 biografia__subtitulo--tyf sombraTxt">2013 - 2014</h5>
 						<p class="p-3 pr-3 biografia__parrafo--tyf sombraTxt">
