--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -41,8 +41,7 @@
 				  </button>
 				  <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
 				    <div class="navbar-nav">
-				      <a class="nav-link p-4 nav__pages--animacion" href="shows.html">Shows</a>
-				      <a class="nav-link p-4 nav__pages--animacion" href="shop.html">Shop</a>
+				      <a class="nav-link p-4 nav__pages--animacion" href="shows.html">Shows</a>				      
 				      <a class="nav-link p-4 nav__pages--animacion" href="discografia.html">Discografía</a>
 				      <a class="nav-link p-4 nav__pages--animacion" href="biografia.html">Biografía</a>
 				      <a class="active nav-link p-4 nav__pages--animacion" href="contacto.html">Contacto</a>
@@ -68,8 +67,8 @@
 
 	<!-- formulario -->
 	<div class="container">
-		<div class="row">
-			<div class="col-lg-6 col-xs-12 mt-5 mb-5">
+		<div class="row mt-5 mb-5 contacto__background rounded">
+			<div class="col-lg-6 col-xs-12 p-3">
 				<form>
 					<div class="col pb-3 pl-3 pr-3">
 						<label for="exampleFormControlInput1" class="formulario__label--tyf sombraTxt">Nombre</label>
@@ -93,8 +92,8 @@
 					</div>
 				</form>
 			</div>
-			<div class="col-lg-6 mt-5 mb-5 pl-3 pr-3">
-				<img src="../assets/images/FOTO3.jpg" alt="" class="img-fluid sombraCont contenido__img--border">
+			<div class="col-lg-6 p-3">
+				<img src="../assets/images/FOTO3.jpg" alt="" class="img-fluid sombraCont contenido__img--border rounded">
 			</div>			
 		</div>
 	</div>
