--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -64,9 +64,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-xs-12">
-                <div class="mb-5 pb-3 bB">
-                    <h3 class="sombraTxt m-2">Discos</h3>
-                    <div>
+                <div class="mt-5 p-3 bB discografia__background rounded">
+                    <h3 class="sombraTxt">Discos</h3>
+                    <div class="d-inline-flex flex-wrap justify-content-center">
                         <a href="#Anonimato"><img class="rounded m-3 sombraCont contenido__img--border img--animacion" src="../assets/discos y sencillos/Anonimato.jpg" alt="#Anonimato"></a>
                         <a href="#elOrigen"><img class="rounded m-3 sombraCont contenido__img--border img--animacion" src="../assets/discos y sencillos/El Origen.jpg" alt="El Origen"></a>
                     </div>
@@ -78,9 +78,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-xs-12">
-                <div class="mb-5 pb-3 bB">
+                <div class="mt-5 p-3 bB discografia__background rounded">
                     <h3 class="sombraTxt m-2">Sencillos y EP</h3>
-                    <div>
+                    <div class="d-inline-flex flex-wrap justify-content-center">
                         <a href="https://open.spotify.com/album/4Gq43yGuKPNHuxb3Dlx9E1" target="_blanck"><img class="rounded m-3 sombraCont contenido__img--border img--animacion" width=150 src="../assets/discos y sencillos/Cual Hay.jpg" alt="Cual Hay"></a>
                         <a href="https://open.spotify.com/album/2XbXnRwQEPXLSusESfJl2J" target="_blanck"><img class="rounded m-3 sombraCont contenido__img--border img--animacion" width=150 src="../assets/discos y sencillos/DHARMA (portada).jpg" alt="DHARMA"></a>
                         <a href="https://open.spotify.com/album/2kURVRcOIyPsWcoaN4zbz3" target="_blanck"><img class="rounded m-3 sombraCont contenido__img--border img--animacion" width=150 src="../assets/discos y sencillos/Jugador del Anio.jpg" alt="Jugador del Año"></a>
@@ -105,13 +105,22 @@
         </div>
     </div>
     <!-- descripcion discos, sencillos y ep -->
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-xs-12 mt-5 mb-5 ml-3 mr-3 bB">
-                <h3>#Anonimato</h3>
-                <div class="disco--grid">
-                    <img class="rounded sombraCont contenido__img--border disco__img--grid img-fluid" src="../assets/discos y sencillos/Anonimato.jpg" alt="#Anonimato">
-                    <ul class="dico__lista--grid">
+    <div class="container discografia__background rounded">
+        <div class="row bB mt-5">
+            <div class="col-lg-3 col-xs-12 p-3 d-flex flex-colum flex-wrap justify-content-center">
+                <img class="rounded sombraCont contenido__img--border img-fluid" src="../assets/discos y sencillos/Anonimato.jpg" alt="#Anonimato">
+                <h3 class="p-3 disco__discoTitulo--tyf">#Anonimato</h3>
+                <p class="sombraTxt disco__descripcion--grid disco__descripcion-tyf">
+                    Publicado en 2018<br>
+                    Producción a cargo de: 808 GOD<br>
+                    Arte de Tapa: Siena<br>
+                    Disponible en:<br>
+                    <a href="https://open.spotify.com/album/1Vf8TaKV0eKpWmAaO78ZCh" target="_blanck"><img src="../assets/logos e iconos/spotify.png" alt="spotify" width="30" class="m-3 discos__spotify--animacion"></a>
+                </p>
+                <a id="elOrigen"></a>
+            </div>
+            <div class="col-lg-9 col-xs-12">                
+                <ul class="p-3">
                         <li class="mb-3">
                             <div class="li--bB disco__letra--flex">
                                 <h5 class="sombraTxt disco__cancionTitulo--tyf">Agustin</h5>
@@ -915,24 +924,25 @@
                                 </div>
                         </li>
                     </ul>
-                    <p class="mt-3 sombraTxt disco__descripcion--grid disco__descripcion-tyf">
-                        Publicado en 2018<br>
-                        Producción a cargo de: 808 GOD<br>
-                        Arte de Tapa: Siena<br>
-                        Disponible en:<br>
-                        <a href="https://open.spotify.com/album/1Vf8TaKV0eKpWmAaO78ZCh" target="_blanck"><img src="../assets/logos e iconos/spotify.png" alt="spotify" width="30" class="m-3 discos__spotify--animacion"></a></p>
-                    <a id="elOrigen"></a>
-                </div>
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-xs-12 mt-5 mb-5 ml-3 mr-3 bB">
-                <h3>El Origen</h3>
-                <div class="disco--grid">
-                    <img class="rounded sombraCont contenido__img--border disco__img--grid img-fluid" src="../assets/discos y sencillos/El Origen.jpg" alt="El Origen">
-                    <ul class="dico__lista--grid">
+    <div class="container discografia__background rounded">
+        <div class="row bB mt-5 mb-5">
+            <div class="col-lg-3 col-xs-12 p-3 d-flex flex-colum flex-wrap justify-content-center">
+                <img class="rounded sombraCont contenido__img--border img-fluid" src="../assets/discos y sencillos/El Origen.jpg" alt="El Origen">
+                <h3 class="p-3 disco__discoTitulo--tyf">El Origen</h3>
+                <p class="sombraTxt disco__descripcion--grid disco__descripcion-tyf">
+                    Publicado en 2016<br>
+                    Producción a cargo de: TOXICO<br>
+                    Arte de Tapa: Siena<br>
+                    Disponible en:<br>
+                    <a href="https://open.spotify.com/album/6i7UiYUX6f8P9cjhO1rPJJ" target="_blanck"><img src="../assets/logos e iconos/spotify.png" alt="spotify" width="30" class="m-3 discos__spotify--animacion"></a>
+                </p>
+                <a id="elOrigen"></a></p>
+            </div>
+            <div class="col-lg-9 col-xs-12">
+                <ul class="p-3">
                         <li class="mb-3">
                             <div class="li--bB disco__letra--flex">
                                 <h5 class="sombraTxt disco__cancionTitulo--tyf">Biggie 1997 (feat. Dj Rima)</h5>
@@ -1829,16 +1839,8 @@
                                 </div>
                         </li>
                     </ul>
-                    <p class="mt-3 sombraTxt disco__descripcion--grid disco__descripcion-tyf">
-                        Publicado en 2016<br>
-                        Producción a cargo de: TOXICO<br>
-                        Arte de Tapa: Siena<br>
-                        Disponible en:<br>
-                        <a href="https://open.spotify.com/album/6i7UiYUX6f8P9cjhO1rPJJ" target="_blanck"><img src="../assets/logos e iconos/spotify.png" alt="spotify" width="30" class="m-3 discos__spotify--animacion"></a></p>
-                    <a id="elOrigen"></a></p>
-                </div>
             </div>
-        </div>
+        </div>        
     </div>
     
     <!-- footer -->
