arreglos generales en vista mobile

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 	<!-- titulo -->
 	<div class="container mt-5">
 		<div class="row">
-			<div class="col-lg-12 col-xs-12">
+			<div class="col-lg-12 col-xs-12 p-3">
 				<h1 class="sombraTxt pt-5 mt-5">Bienvenidos sean a la<br>WEB OFICIAL de ACRU</h1>
 				<p class="sombraTxt p-5 m-5">			
 				En este espacio pensado totalmente para los mayores seguidores de ACRU, podrán encontrar información detallada sobre sus próximos shows, sus lanzamientos musicales, novedades, y además tendrán acceso al E-Shop donde podrán seleccionar sus productos personalizados de ACRU.
