--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -56,7 +56,7 @@
 	<!-- titulo -->
 	<div class="container mt-5">
 		<div class="row">
-			<div class="col-lg-12 col-xs-12">
+			<div class="col-lg-12 col-xs-12 p-3">
 				<h1 class="sombraTxt">Contacto</h1>
 				<p class="sombraTxt">			
 				Ponete en contacto con mi equipo.
