--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -51,7 +51,7 @@
     <!-- titulo -->
     <div class="container mt-5">
         <div class="row">
-            <div class="col-lg-12 col-xs-12">
+            <div class="col-lg-12 col-xs-12 p-3">
                 <h1 class="sombraTxt">Discografía</h1>
                 <p class="sombraTxt">
                     De la primera a la última, todas mis canciones.
@@ -109,15 +109,17 @@
         <div class="row bB mt-5">
             <div class="col-lg-3 col-xs-12 p-3 d-flex flex-colum flex-wrap justify-content-center">
                 <img class="rounded sombraCont contenido__img--border img-fluid" src="../assets/discos y sencillos/Anonimato.jpg" alt="#Anonimato">
-                <h3 class="p-3 disco__discoTitulo--tyf">#Anonimato</h3>
-                <p class="sombraTxt disco__descripcion--grid disco__descripcion-tyf">
-                    Publicado en 2018<br>
-                    Producción a cargo de: 808 GOD<br>
-                    Arte de Tapa: Siena<br>
-                    Disponible en:<br>
-                    <a href="https://open.spotify.com/album/1Vf8TaKV0eKpWmAaO78ZCh" target="_blanck"><img src="../assets/logos e iconos/spotify.png" alt="spotify" width="30" class="m-3 discos__spotify--animacion"></a>
-                </p>
-                <a id="elOrigen"></a>
+                <div class="d-flex flex-column justify-content-center">
+                    <h3 class="p-3 disco__discoTitulo--tyf">#Anonimato</h3>
+                    <p class="sombraTxt disco__descripcion-tyf">
+                        Publicado en 2018<br>
+                        Producción a cargo de: 808 GOD<br>
+                        Arte de Tapa: Siena<br>
+                        Disponible en:<br>
+                        <a href="https://open.spotify.com/album/1Vf8TaKV0eKpWmAaO78ZCh" target="_blanck"><img src="../assets/logos e iconos/spotify.png" alt="spotify" width="30" class="m-3 discos__spotify--animacion"></a>
+                    </p>
+                    <a id="elOrigen"></a>
+                </div>
             </div>
             <div class="col-lg-9 col-xs-12">                
                 <ul class="p-3">
@@ -928,18 +930,20 @@
         </div>
     </div>
     <div class="container discografia__background rounded">
-        <div class="row bB mt-5 mb-5">
+        <div class="row bB mt-5">
             <div class="col-lg-3 col-xs-12 p-3 d-flex flex-colum flex-wrap justify-content-center">
                 <img class="rounded sombraCont contenido__img--border img-fluid" src="../assets/discos y sencillos/El Origen.jpg" alt="El Origen">
-                <h3 class="p-3 disco__discoTitulo--tyf">El Origen</h3>
-                <p class="sombraTxt disco__descripcion--grid disco__descripcion-tyf">
-                    Publicado en 2016<br>
-                    Producción a cargo de: TOXICO<br>
-                    Arte de Tapa: Siena<br>
-                    Disponible en:<br>
-                    <a href="https://open.spotify.com/album/6i7UiYUX6f8P9cjhO1rPJJ" target="_blanck"><img src="../assets/logos e iconos/spotify.png" alt="spotify" width="30" class="m-3 discos__spotify--animacion"></a>
-                </p>
-                <a id="elOrigen"></a></p>
+                <div class="d-flex flex-column justify-content-center">
+                    <h3 class="p-3 disco__discoTitulo--tyf">El Origen</h3>
+                    <p class="sombraTxt disco__descripcion-tyf">
+                        Publicado en 2016<br>
+                        Producción a cargo de: TOXICO<br>
+                        Arte de Tapa: Siena<br>
+                        Disponible en:<br>
+                        <a href="https://open.spotify.com/album/6i7UiYUX6f8P9cjhO1rPJJ" target="_blanck"><img src="../assets/logos e iconos/spotify.png" alt="spotify" width="30" class="m-3 discos__spotify--animacion"></a>
+                    </p>
+                    <a id="elOrigen"></a></p>
+                </div>
             </div>
             <div class="col-lg-9 col-xs-12">
                 <ul class="p-3">
