--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	</div>
 	
 	<!-- carousel -->
-	<div class="container-fluid">
+	<div class="container-fluid nav--border">
 		<div class="row">
 			<div class="col-lg-12 col-xs-12">
 				<!--Carousel Wrapper-->
@@ -64,43 +64,64 @@
 				    <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
 				    <li data-target="#carousel-example-2" data-slide-to="1"></li>
 				    <li data-target="#carousel-example-2" data-slide-to="2"></li>
+				    <li data-target="#carousel-example-2" data-slide-to="3"></li>
 				  </ol>
 				  <!--/.Indicators-->
 				  <!--Slides-->
 				  <div class="carousel-inner" role="listbox">
 				    <div class="carousel-item active">
 				      <div class="view">
-				        <img class="d-block w-100" src="assets/images/FOTO6.jpg"
+				      	<a href="pages/discografia.html">
+				        <img class="d-block w-100" src="assets/images/DHARMA.jpg"
 				          alt="First slide">
+				        </a>
 				        <div class="mask rgba-black-light"></div>
 				      </div>
-				      <div class="carousel-caption">
-				        <h3 class="h3-responsive carousel__titulo sombraTxt" >Mi Nuevo Álbum "EL DON"</h3>
-				        <p class="carousel__subtitulo sombraTxt">2 productores superlativos y un wacho que no conoce otra cosa.</p>
+				      <div class="carousel-caption hidden-mobile">				        
+					        <h3 class="h3-responsive carousel__titulo sombraTxt">DISCOGRAFÍA</h3>
+					        <p class="carousel__subtitulo sombraTxt">De la primera a la última, todas mis canciones.</p>					    
 				      </div>
 				    </div>
 				    <div class="carousel-item">
 				      <!--Mask color-->
 				      <div class="view">
-				        <img class="d-block w-100" src="assets/images/DHARMA.jpg"
+				      	<a href="pages/shows.html">
+				        <img class="d-block w-100" src="assets/images/RECITAL1.jpg"
 				          alt="Second slide">
+				      	</a>
 				        <div class="mask rgba-black-strong"></div>
 				      </div>
-				      <div class="carousel-caption">
-				        <h3 class="h3-responsive carousel__titulo sombraTxt">DHARMA</h3>
-				        <p class="carousel__subtitulo sombraTxt">Mi primer tema del 2021</p>
+				      <div class="carousel-caption hidden-mobile">
+				        <h3 class="h3-responsive carousel__titulo sombraTxt">SHOWS</h3>
+				        <p class="carousel__subtitulo sombraTxt">Enterate de todas las fechas que se vienen.</p>
 				      </div>
 				    </div>
 				    <div class="carousel-item">
 				      <!--Mask color-->
 				      <div class="view">
-				        <img class="d-block w-100" src="assets/images/RECITAL1.jpg"
+				        <a href="pages/contacto.html">
+				        <img class="d-block w-100" src="assets/images/FOTO6.jpg"
 				          alt="Third slide">
+				        </a>
 				        <div class="mask rgba-black-slight"></div>
 				      </div>
-				      <div class="carousel-caption">
-				        <h3 class="h3-responsive carousel__titulo sombraTxt">GRACIAS</h3>
-				        <p class="carousel__subtitulo sombraTxt">por elegirnos y hacerse presente en este proyecto tan especial y cuidado para todos nosotros.</p>
+				      <div class="carousel-caption hidden-mobile">
+				        <h3 class="h3-responsive carousel__titulo sombraTxt">CONTACTO</h3>
+				        <p class="carousel__subtitulo sombraTxt">Comunicate con mi equipo</p>
+				      </div>
+				    </div>
+				    <div class="carousel-item">
+				      <!--Mask color-->
+				      <div class="view">
+				      	<a href="pages/biografia.html">
+				        <img class="d-block w-100" src="assets/images/FOTO10.jpg"
+				          alt="Third slide">
+				        </a>  
+				        <div class="mask rgba-black-slight"></div>
+				      </div>
+				      <div class="carousel-caption hidden-mobile">
+				        <h3 class="h3-responsive carousel__titulo sombraTxt">BIOGRAFÍA</h3>
+				        <p class="carousel__subtitulo sombraTxt">Mi historia de vida.</p>
 				      </div>
 				    </div>
 				  </div>
@@ -120,38 +141,70 @@
 			</div>			
 		</div>		
 	</div>
-	
+
 	<!-- titulo -->
-	<div class="container mt-5">
-		<div class="row">
-			<div class="col-lg-12 col-xs-12 p-3">
-				<h1 class="sombraTxt pt-5 mt-5">Bienvenidos sean a la<br>WEB OFICIAL de ACRU</h1>
-				<p class="sombraTxt p-5 m-5">			
-				En este espacio pensado totalmente para los mayores seguidores de ACRU, podrán encontrar información detallada sobre sus próximos shows, sus lanzamientos musicales, novedades, y además tendrán acceso al E-Shop donde podrán seleccionar sus productos personalizados de ACRU.
-				</p>				
-			</div>			
-		</div>		
-	</div>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-lg-12 col-xs-12">
+                <h1 class="sombraTxt p-3">Bienvenidos sean a la<br>WEB OFICIAL de ACRU</h1>
+                <p class="sombraTxt p-3">
+                    En este espacio pensado totalmente para los <strong>mayores seguidores de ACRU</strong>, podrán encontrar información detallada sobre sus <strong>próximos shows</strong>, sus <strong>lanzamientos musicales </strong>, novedades, mucho más.
+                </p>
+            </div>
+        </div>
+    </div>
 
 	<!-- contenido -->
-	<div class="container">
-		<div class="row d-flex align-items-center m-5">
-			<div class="col-lg-4 col-xs-12 mb-5">
-				<img src="assets/images/FOTO1.jpg" class="img-fluid sombraCont contenido__img--border">
+	<div class="container mt-5 contenido__desplazamiento">
+		<div class="row index__background rounded">
+			<div class="col-lg-8 col-xs-12 p-3">
+				<div>
+					<a href="https://www.filo.news/musica/Acru-Hay-trabajos-que-cada-tanto-te-ayudan-a-subir-el-nivel-y-YANTAZ-es-uno-de-ellos-20210817-0025.html" target="_blanck" class="td-none">
+						<h5 class="novedades__titulo--tyf sombraTxt">Entrevista en "Filo News"</h5>
+						<p class="novedades__p--tyf sombraTxt">
+						Previo a su álbum "EL DON", el MC presenta un easy play prod by Veeyam.<br>
+						"D1SPARO" es el primer corte y el Estadio Obras, la primera parada.<br>
+						El recorrido de un artista que experimenta la madurez sonora y sueña con el Luna Park.<br>
+						<br>
+						Allá por octubre de 2020, cuando el país seguía bajo aislamiento obligatorio y los shows con público eran una triste fantasía lejana, Acru dio una clase magistral en la FMS. En apenas 42 segundos de presentación dejó un minutazo de free para la historia y una frase que pasaría a formar parte del capital cultural del hip hop local.
+						</p>
+					</a>
+				</div>
 			</div>
-			<div class="col-lg-8 col-xs-12">
-				<p class=" sombraTxt contenido__txt pl-5">“Trato de cuidar la esencia que me moviliza. Me encanta indagar, explorar, llegar a lugares nuevos, enriquecerme… Pero tengo fuerte esa cuestión originaria en mi música, y le doy valor. No hay demasiados haciendo lo que estoy haciendo. Me pone contento, pero todo resulta muy natural. El día que sienta que tenga que moverme, me moveré. Trato de que la esencia, el trasfondo de lo que digo, de cómo lo digo y del juego métrico siga estando porque, considero, es lo que hace crecer al estilo.”</p>			
+			<div class="col-lg-4 col-xs-12 p-3">
+				<img src="assets/images/FOTO1.jpg" class="img-fluid contenido__img--border rounded sombraCont">
+			</div>
+		</div>
+	</div>		
+	<div class="container mt-5 contenido__desplazamiento">
+		<div class="row index__background rounded">	
+			<div class="col-lg-8 col-xs-12 p-3">
+				<div>
+					<a href="https://www.pagina12.com.ar/361201-acru-somos-una-camada-que-ama-esta-musica-y-la-hizo-propia" target="_blanck" class="td-none">
+						<h5 class="novedades__titulo--tyf sombraTxt">Entrevista en "Página 12"</h5>
+						<p class="novedades__p--tyf sombraTxt">
+						El tucumano Agustín Cruz, competidor legendario y uno de los mejores raperos de su generación.<br>
+						<strong>Acru: "Somos una camada que ama esta música y la hizo propia"</strong><br>
+						Mientras termina su tercer disco, soltó canciones nuevas, sesiones de improvisación, gira por el país y agota en Buenos Aires.<br>
+						<br>
+						Una cara firme, austera, recortada por el sol y la sombra en partes iguales. Sentado en un pintoresco vagón fuera de servicio que decora un bolichín algo oculto de Palermo, Acru pone el cuerpo para la sesión de fotos y así sigue haciendo girar las ruedas de su carrera. "Soy la persona con menos Palermo del mundo, es la primera vez que vengo. Está lindo, tiene su clima." Las palabras salen a su debido ritmo, algo susurradas, algo nasales también, propias de una sonoridad que lo vuelve inconfundible.
+					</p>
+					</a>
+				</div>
+			</div>
+			<div class="col-lg-4 col-xs-12 p-3">
+				<img src="assets/images/FOTO2.jpg" class="img-fluid contenido__img--border rounded sombraCont">
 			</div>			
 		</div>
-		<div class="row d-flex align-items-center m-5">
-			<div class="col-lg-4 col-xs-12  mb-5">
-				<img src="assets/images/FOTO2.jpg" class="img-fluid contenido__img--border sombraCont">				
-			</div>
-			<div class="col-lg-8 col-xs-12">
-				<p class=" sombraTxt contenido__txt pl-5">“El contacto con la música lo tuve desde muy chico. Mi papá es escritor; entonces, escribía y ponía música de fondo. Mientras, en otro lugar de la casa, mi mamá estaba con sus cosas y pasaba lo mismo, ponía música. Cada cual escuchaba lo suyo… Y así fue como de chico me copaba, mientras dibujaba (mi otra pasión), con Mercedes Sosa, el Flaco Spinetta, Joe Cocker, Led Zeppelin, Santana, Rage Against The Machine, Bob Marley, León Gieco y con Rodrigo. En la secundaria me metí en la movida del hip hop y empecé con las canciones de los chicos más grandes, que las subían a Internet.”</p>				
-			</div>			
-		</div>		
 	</div>
+	<div class="container mt-5 mb-5">
+		<div class="row index__background rounded">	
+			<div class="col-lg-12 col-xs-12 p-3 d-flex flex-wrap justify-content-around align-items-around">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/cvNDf_iQze0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="p-3"></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/wo4jG_J56L8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="p-3"></iframe>
+			</div>
+		</div>
+	</div>		
 	
 	<!-- footer -->
 	<div class="container-fluid">
