--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,13 +53,22 @@
 		</div>		
 	</div>
 
+	<!-- img encabezado -->
+    <div class="container-fluid nav--border">
+        <div class="row">
+            <div class="col-lg-12 col-xs-12">
+                <img src="../assets/images/FOTO6.jpg" alt="" class="img-fluid">
+            </div>
+        </div>
+    </div>
+
 	<!-- titulo -->
 	<div class="container mt-5">
 		<div class="row">
 			<div class="col-lg-12 col-xs-12 p-3">
 				<h1 class="sombraTxt">Contacto</h1>
 				<p class="sombraTxt">			
-				Ponete en contacto con mi equipo.
+				Comunicate con mi equipo.
 				</p>				
 			</div>			
 		</div>		
