--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -53,6 +53,15 @@
 		</div>		
 	</div>
 
+	<!-- img encabezado -->
+    <div class="container-fluid nav--border">
+        <div class="row">
+            <div class="col-lg-12 col-xs-12">
+                <img src="../assets/images/FOTO10.jpg" alt="" class="img-fluid">
+            </div>
+        </div>
+    </div>
+
 	<!-- titulo -->
 	<div class="container mt-5">
 		<div class="row">
