--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -48,6 +48,14 @@
             </div>
         </div>
     </div>
+    <!-- img encabezado -->
+    <div class="container-fluid nav--border">
+        <div class="row">
+            <div class="col-lg-12 col-xs-12">
+                <img src="../assets/images/DHARMA.jpg" alt="" class="img-fluid">
+            </div>
+        </div>
+    </div>
     <!-- titulo -->
     <div class="container mt-5">
         <div class="row">
@@ -930,7 +938,7 @@
         </div>
     </div>
     <div class="container discografia__background rounded">
-        <div class="row bB mt-5">
+        <div class="row bB mt-5 mb-5">
             <div class="col-lg-3 col-xs-12 p-3 d-flex flex-colum flex-wrap justify-content-center">
                 <img class="rounded sombraCont contenido__img--border img-fluid" src="../assets/discos y sencillos/El Origen.jpg" alt="El Origen">
                 <div class="d-flex flex-column justify-content-center">
