agregando img de encabezado en las paginas

--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
 					<a href="https://www.filo.news/musica/Acru-Hay-trabajos-que-cada-tanto-te-ayudan-a-subir-el-nivel-y-YANTAZ-es-uno-de-ellos-20210817-0025.html" target="_blanck" class="td-none">
 						<h5 class="novedades__titulo--tyf sombraTxt">Entrevista en "Filo News"</h5>
 						<p class="novedades__p--tyf sombraTxt">
-						Previo a su álbum "EL DON", el MC presenta un easy play prod by Veeyam.<br>
+						<strong>Previo a su álbum "EL DON"</strong>, el MC presenta un easy play prod by Veeyam.<br>
 						"D1SPARO" es el primer corte y el Estadio Obras, la primera parada.<br>
-						El recorrido de un artista que experimenta la madurez sonora y sueña con el Luna Park.<br>
+						El recorrido de un artista que experimenta la madurez sonora y <strong>sueña con el Luna Park</strong>.<br>
 						<br>
-						Allá por octubre de 2020, cuando el país seguía bajo aislamiento obligatorio y los shows con público eran una triste fantasía lejana, Acru dio una clase magistral en la FMS. En apenas 42 segundos de presentación dejó un minutazo de free para la historia y una frase que pasaría a formar parte del capital cultural del hip hop local.
+						Allá por octubre de 2020, cuando el país seguía bajo aislamiento obligatorio y los shows con público eran una triste fantasía lejana, <strong>Acru dio una clase magistral en la FMS</strong>. En apenas 42 segundos de presentación dejó un minutazo de free para la historia y una frase que pasaría a formar parte del capital cultural del hip hop local.
 						</p>
 					</a>
 				</div>
@@ -187,7 +187,7 @@
 						<strong>Acru: "Somos una camada que ama esta música y la hizo propia"</strong><br>
 						Mientras termina su tercer disco, soltó canciones nuevas, sesiones de improvisación, gira por el país y agota en Buenos Aires.<br>
 						<br>
-						Una cara firme, austera, recortada por el sol y la sombra en partes iguales. Sentado en un pintoresco vagón fuera de servicio que decora un bolichín algo oculto de Palermo, Acru pone el cuerpo para la sesión de fotos y así sigue haciendo girar las ruedas de su carrera. "Soy la persona con menos Palermo del mundo, es la primera vez que vengo. Está lindo, tiene su clima." Las palabras salen a su debido ritmo, algo susurradas, algo nasales también, propias de una sonoridad que lo vuelve inconfundible.
+						Una cara firme, austera, recortada por el sol y la sombra en partes iguales. Sentado en un pintoresco vagón fuera de servicio que decora un bolichín algo oculto de Palermo, Acru pone el cuerpo para la sesión de fotos y así sigue haciendo girar las ruedas de su carrera. <strong>"Soy la persona con menos Palermo del mundo, es la primera vez que vengo. Está lindo, tiene su clima."</strong> Las palabras salen a su debido ritmo, algo susurradas, algo nasales también, propias de una sonoridad que lo vuelve inconfundible.
 					</p>
 					</a>
 				</div>
@@ -207,9 +207,9 @@
 	</div>		
 	
 	<!-- footer -->
-	<div class="container-fluid">
+	<div class="container-fluid footer--background">
 		<div class="row">
-			<div class="col-lg-12 col-xs-12">
+			<div class="col-lg-12 col-xs-12 li--bB">
 				<footer class="d-flex align-items-center justify-content-around">
 					<div>
 						<img src="assets/logos e iconos/LOGO2.png" width="200" height="200">
@@ -224,6 +224,12 @@
 						</div>
 					</div>					
 				</footer>				
+			</div>
+			<div class="col-lg-12 col-xs-12">
+				<p class="footer__copy--tyf p-3">
+				© 2021 ACRU / Todos los derechos reservados<br>
+				Developed By Leandro Doliri
+				</p>
 			</div>			
 		</div>		
 	</div>
