--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -57,7 +57,7 @@
     <div class="container-fluid nav--border">
         <div class="row">
             <div class="col-lg-12 col-xs-12">
-                <img src="../assets/images/FOTO10.jpg" alt="" class="img-fluid">
+                <img src="../assets/images/FOTO10.jpg" alt="" class="img-fluid img-crop">
             </div>
         </div>
     </div>
@@ -80,9 +80,9 @@
             <div class="col-lg-8 col-xs-12 d-flex align-items-center">
                 <div>
                     <p class="p-3 biografia__parrafo--tyf sombraTxt">
-	                    Agustín Cruz, más conocido por su nombre artístico Acru es un rapero originario de Argentina, nacido el 4 de junio de 1997, en Tucumán.<br>
+	                    <strong>Agustín Cruz</strong>, más conocido por su nombre artístico <strong>Acru</strong> es un rapero originario de Argentina, nacido el <strong>4 de junio de 1997</strong>, en Tucumán.<br>
 						<br>
-						Compitió tanto en las batallas underground como El Quinto Escalón y algunas otras de escenarios, y es considerado como uno de los mejores de la Argentina y el mejor argentino en cuánto a skills y métricas se debe.<br>
+						Compitió tanto en las batallas underground como El Quinto Escalón y algunas otras de escenarios, y <strong>es considerado como uno de los mejores de la Argentina</strong> y el mejor argentino en cuánto a skills y métricas se debe.<br>
 						<br>
 						Su primer tema registrado se llama "Viejta mía!" del 28 de enero del año 2014, y su primera batalla registrada es "Acru vs Fortuna", subida el 5 de septiembre del año 2013.<br>
 					</p>
@@ -146,9 +146,9 @@
 	</div>
 		
 	<!-- footer -->
-	<div class="container-fluid">
+	<div class="container-fluid footer--background">
 		<div class="row">
-			<div class="col-lg-12 col-xs-12">
+			<div class="col-lg-12 col-xs-12 li--bB">
 				<footer class="d-flex align-items-center justify-content-around">
 					<div>
 						<img src="../assets/logos e iconos/LOGO2.png" width="200" height="200">
@@ -163,7 +163,13 @@
 						</div>
 					</div>					
 				</footer>				
-			</div>			
+			</div>
+			<div class="col-lg-12 col-xs-12">
+				<p class="footer__copy--tyf p-3">
+				© 2021 ACRU / Todos los derechos reservados<br>
+				Developed By Leandro Doliri
+				</p>
+			</div>		
 		</div>		
 	</div>
 
