--- a/pages/shows.html
+++ b/pages/shows.html
@@ -57,7 +57,7 @@
 	<div class="container-fluid nav--border">
 		<div class="row">
 			<div class="col-lg-12 col-xs-12">
-				<img src="../assets/images/RECITAL1.jpg" alt="" class="img-fluid">
+				<img src="../assets/images/RECITAL1.jpg" alt="" class="img-fluid img-crop">
 			</div>
 		</div>
 	</div>
@@ -75,7 +75,7 @@
 	</div>
 
 	<!-- section -->
-	<div class="container mt-5 p-3 shows__background rounded">
+	<div class="container mt-5 p-3 shows__background rounded contenido__desplazamiento">
 		<div class="row d-flex justify-content-center align-items-center">
 			<div class="col-lg-5 col-xs-12">
 				<img src="../assets/shows/acru_salta960.png" class="img-fluid rounded">
@@ -89,7 +89,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="container mt-5 p-3 shows__background rounded">
+	<div class="container mt-5 p-3 shows__background rounded contenido__desplazamiento">
 		<div class="row d-flex justify-content-center align-items-center">
 			<div class="col-lg-5 col-xs-12">
 				<img src="../assets/shows/acru_gc960.png" class="img-fluid rounded">
@@ -103,7 +103,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="container mt-5 p-3 shows__background rounded">
+	<div class="container mt-5 p-3 shows__background rounded contenido__desplazamiento">
 		<div class="row d-flex justify-content-center align-items-center">
 			<div class="col-lg-5 col-xs-12">
 				<img src="../assets/shows/acru_sj960.png" class="img-fluid rounded">
@@ -117,7 +117,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="container mt-5 p-3 shows__background rounded">
+	<div class="container mt-5 p-3 shows__background rounded contenido__desplazamiento">
 		<div class="row d-flex justify-content-center align-items-center">
 			<div class="col-lg-5 col-xs-12">
 				<img src="../assets/shows/acru_sl960.png" class="img-fluid rounded">
@@ -131,7 +131,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="container mt-5 mb-5 p-3 shows__background rounded">
+	<div class="container mt-5 mb-5 p-3 shows__background rounded contenido__desplazamiento">
 		<div class="row d-flex justify-content-center align-items-center">
 			<div class="col-lg-5 col-xs-12">
 				<img src="../assets/shows/acru_sluis960.png" class="img-fluid rounded">
@@ -147,9 +147,9 @@
 	</div>
 	
 	<!-- footer -->
-	<div class="container-fluid">
+	<div class="container-fluid footer--background">
 		<div class="row">
-			<div class="col-lg-12 col-xs-12">
+			<div class="col-lg-12 col-xs-12 li--bB">
 				<footer class="d-flex align-items-center justify-content-around">
 					<div>
 						<img src="../assets/logos e iconos/LOGO2.png" width="200" height="200">
@@ -164,7 +164,13 @@
 						</div>
 					</div>					
 				</footer>				
-			</div>			
+			</div>
+			<div class="col-lg-12 col-xs-12">
+				<p class="footer__copy--tyf p-3">
+				© 2021 ACRU / Todos los derechos reservados<br>
+				Developed By Leandro Doliri
+				</p>
+			</div>		
 		</div>		
 	</div>
 
