--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -57,7 +57,7 @@
     <div class="container-fluid nav--border">
         <div class="row">
             <div class="col-lg-12 col-xs-12">
-                <img src="../assets/images/FOTO6.jpg" alt="" class="img-fluid">
+                <img src="../assets/images/FOTO6.jpg" alt="" class="img-fluid img-crop">
             </div>
         </div>
     </div>
@@ -96,8 +96,8 @@
 				    	<textarea class="form-control formulario__input--tyf" id="exampleFormControlTextarea1" rows="5"></textarea>
 				  	</div>								
 					<div class="d-flex justify-content-around">
-						<input class="btn formulario__btn--tyf" type="submit" value="Submit">
-						<input class="btn formulario__btn--tyf" type="reset" value="Reset">
+						<input class="btn formulario__btn--tyf contacto__botones--animacion" type="submit" value="Submit">
+						<input class="btn formulario__btn--tyf contacto__botones--animacion" type="reset" value="Reset">
 					</div>
 				</form>
 			</div>
@@ -108,9 +108,9 @@
 	</div>
 
 	<!-- footer -->
-	<div class="container-fluid">
+	<div class="container-fluid footer--background">
 		<div class="row">
-			<div class="col-lg-12 col-xs-12">
+			<div class="col-lg-12 col-xs-12 li--bB">
 				<footer class="d-flex align-items-center justify-content-around">
 					<div>
 						<img src="../assets/logos e iconos/LOGO2.png" width="200" height="200">
@@ -125,7 +125,13 @@
 						</div>
 					</div>					
 				</footer>				
-			</div>			
+			</div>
+			<div class="col-lg-12 col-xs-12">
+				<p class="footer__copy--tyf p-3">
+				© 2021 ACRU / Todos los derechos reservados<br>
+				Developed By Leandro Doliri
+				</p>
+			</div>		
 		</div>		
 	</div>
 
