--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -52,7 +52,7 @@
     <div class="container-fluid nav--border">
         <div class="row">
             <div class="col-lg-12 col-xs-12">
-                <img src="../assets/images/DHARMA.jpg" alt="" class="img-fluid">
+                <img src="../assets/images/DHARMA.jpg" alt="" class="img-fluid img-crop">
             </div>
         </div>
     </div>
@@ -1856,9 +1856,9 @@
     </div>
     
     <!-- footer -->
-    <div class="container-fluid">
+    <div class="container-fluid footer--background">
         <div class="row">
-            <div class="col-lg-12 col-xs-12">
+            <div class="col-lg-12 col-xs-12 li--bB">
                 <footer class="d-flex align-items-center justify-content-around">
                     <div>
                         <img src="../assets/logos e iconos/LOGO2.png" width="200" height="200">
@@ -1871,10 +1871,16 @@
                             <a class="footer__redes--animacion" href="https://open.spotify.com/artist/0bYQe0JDIjxkSHQoXlfngl" target="_blanck"><img src="../assets/logos e iconos/spotify.png" alt="spotify" width="30" class="footer__icons--pd"></a>
                             <a class="footer__redes--animacion" href="https://www.youtube.com/channel/UCN-QYHxYlcX5g4-vdIzK3uA" target="_blanck"><img src="../assets/logos e iconos/youtube.png" alt="youtube" width="30" class="footer__icons--pd"></a>
                         </div>
-                    </div>
-                </footer>
+                    </div>                  
+                </footer>               
             </div>
-        </div>
+            <div class="col-lg-12 col-xs-12">
+                <p class="footer__copy--tyf p-3">
+                © 2021 ACRU / Todos los derechos reservados<br>
+                Developed By Leandro Doliri
+                </p>
+            </div>      
+        </div>      
     </div>
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
