--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
+	<!-- AOS CSS -->
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 	<!-- Font Lexend-->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -143,7 +146,7 @@
 	</div>
 
 	<!-- titulo -->
-    <div class="container mt-5">
+    <div class="container mt-5" data-aos="fade-up">
         <div class="row">
             <div class="col-lg-12 col-xs-12">
                 <h1 class="sombraTxt p-3">Bienvenidos sean a la<br>WEB OFICIAL de ACRU</h1>
@@ -155,7 +158,7 @@
     </div>
 
 	<!-- contenido -->
-	<div class="container mt-5 contenido__desplazamiento">
+	<div class="container mt-5 contenido__desplazamiento" data-aos="fade-right">
 		<div class="row index__background rounded">
 			<div class="col-lg-8 col-xs-12 p-3">
 				<div>
@@ -176,7 +179,7 @@
 			</div>
 		</div>
 	</div>		
-	<div class="container mt-5 contenido__desplazamiento">
+	<div class="container mt-5 contenido__desplazamiento" data-aos="fade-left">
 		<div class="row index__background rounded">	
 			<div class="col-lg-8 col-xs-12 p-3">
 				<div>
@@ -197,7 +200,7 @@
 			</div>			
 		</div>
 	</div>
-	<div class="container mt-5 mb-5">
+	<div class="container mt-5 mb-5" data-aos="fade-right">
 		<div class="row index__background rounded">	
 			<div class="col-lg-12 col-xs-12 p-3 d-flex flex-wrap justify-content-around align-items-around">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/cvNDf_iQze0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="p-3"></iframe>
@@ -234,40 +237,14 @@
 		</div>		
 	</div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 	<!-- Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
+	<!-- AOS JS -->
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+	<script>
+  	AOS.init();
+	</script>
 </body>
 </html> 
