--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -12,6 +12,9 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
+	<!-- AOS CSS -->
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 	<!-- Font Lexend-->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,7 +66,7 @@
     </div>
 
 	<!-- titulo -->
-	<div class="container mt-5">
+	<div class="container mt-5" data-aos="fade-up">
 		<div class="row">
 			<div class="col-lg-12 col-xs-12 p-3">
 				<h1 class="sombraTxt">Biografía</h1>
@@ -75,7 +78,7 @@
 	</div>
 
 	<!-- contenido -->
-	<div class="container mt-5 mb-5">
+	<div class="container mt-5 mb-5" data-aos="fade-up">
         <div class="row biografia__background rounded">
             <div class="col-lg-8 col-xs-12 d-flex align-items-center">
                 <div>
@@ -94,7 +97,7 @@
 		</div>
 	</div>
 		
-	<div class="container mb-5">
+	<div class="container mb-5" data-aos="fade-up">
 		<div class="row biografia__background rounded">	
 			<div class="col-lg-12 col-xs-12 bB">
 				<h3 class="p-3 biografia__sectionSubtitulo--tyf sombraTxt">Trayectoria</h3>
@@ -173,40 +176,14 @@
 		</div>		
 	</div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 	<!-- Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
+	<!-- AOS JS -->
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+	<script>
+  	AOS.init();
+	</script>
 </body>
 </html> 
