--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="ACRU Agustin Cruz hiphop hip hop rap freestyle red bull batalla de los gallos fms freestyle master series discos disco ep sencillos cancion">
     <meta name="description" content="Sitio Oficial de Acru - Discografía">
     <link rel="icon" type="image/png" href="../assets/logos e iconos/LOGO2.png">
+
     <title>ACRU - Discografía</title>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
+    <!-- AOS CSS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <!-- Font Lexend-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100;300;400;500;600;700;800&display=swap" rel="stylesheet">
+
     <!-- Font Rock Salt -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
+
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="../css/estilo.css">
 </head>
@@ -48,6 +55,7 @@
             </div>
         </div>
     </div>
+    
     <!-- img encabezado -->
     <div class="container-fluid nav--border">
         <div class="row">
@@ -56,8 +64,9 @@
             </div>
         </div>
     </div>
+
     <!-- titulo -->
-    <div class="container mt-5">
+    <div class="container mt-5" data-aos="fade-up">
         <div class="row">
             <div class="col-lg-12 col-xs-12 p-3">
                 <h1 class="sombraTxt">Discografía</h1>
@@ -67,9 +76,11 @@
             </div>
         </div>
     </div>
+
     <!-- contenido -->
+
     <!-- discos -->
-    <div class="container">
+    <div class="container" data-aos="fade-right">
         <div class="row">
             <div class="col-lg-12 col-xs-12">
                 <div class="mt-5 p-3 bB discografia__background rounded">
@@ -82,8 +93,9 @@
             </div>
         </div>
     </div>
+
     <!-- sencillos y EP -->
-    <div class="container">
+    <div class="container" data-aos="fade-left">
         <div class="row">
             <div class="col-lg-12 col-xs-12">
                 <div class="mt-5 p-3 bB discografia__background rounded">
@@ -112,8 +124,9 @@
             </div>
         </div>
     </div>
+
     <!-- descripcion discos, sencillos y ep -->
-    <div class="container discografia__background rounded">
+    <div class="container discografia__background rounded" data-aos="fade-right">
         <div class="row bB mt-5">
             <div class="col-lg-3 col-xs-12 p-3 d-flex flex-colum flex-wrap justify-content-center">
                 <img class="rounded sombraCont contenido__img--border img-fluid" src="../assets/discos y sencillos/Anonimato.jpg" alt="#Anonimato">
@@ -937,7 +950,7 @@
             </div>
         </div>
     </div>
-    <div class="container discografia__background rounded">
+    <div class="container discografia__background rounded" data-aos="fade-left">
         <div class="row bB mt-5 mb-5">
             <div class="col-lg-3 col-xs-12 p-3 d-flex flex-colum flex-wrap justify-content-center">
                 <img class="rounded sombraCont contenido__img--border img-fluid" src="../assets/discos y sencillos/El Origen.jpg" alt="El Origen">
@@ -1882,9 +1895,16 @@
             </div>      
         </div>      
     </div>
+
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
+    <!-- AOS JS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+    AOS.init();
+    </script>
 </body>
 
 </html>
