--- a/pages/shows.html
+++ b/pages/shows.html
@@ -12,6 +12,9 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
+	<!-- AOS CSS -->
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 	<!-- Font Lexend-->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,7 +66,7 @@
 	</div>
 
 	<!-- titulo -->
-	<div class="container mt-5">
+	<div class="container mt-5" data-aos="fade-up">
 		<div class="row">
 			<div class="col-lg-12 col-xs-12 p-3">
 				<h1 class="sombraTxt">Shows</h1>
@@ -75,7 +78,7 @@
 	</div>
 
 	<!-- section -->
-	<div class="container mt-5 p-3 shows__background rounded contenido__desplazamiento">
+	<div class="container mt-5 p-3 shows__background rounded contenido__desplazamiento" data-aos="fade-right">
 		<div class="row d-flex justify-content-center align-items-center">
 			<div class="col-lg-5 col-xs-12">
 				<img src="../assets/shows/acru_salta960.png" class="img-fluid rounded">
@@ -89,7 +92,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="container mt-5 p-3 shows__background rounded contenido__desplazamiento">
+	<div class="container mt-5 p-3 shows__background rounded contenido__desplazamiento" data-aos="fade-left">
 		<div class="row d-flex justify-content-center align-items-center">
 			<div class="col-lg-5 col-xs-12">
 				<img src="../assets/shows/acru_gc960.png" class="img-fluid rounded">
@@ -103,7 +106,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="container mt-5 p-3 shows__background rounded contenido__desplazamiento">
+	<div class="container mt-5 p-3 shows__background rounded contenido__desplazamiento" data-aos="fade-right">
 		<div class="row d-flex justify-content-center align-items-center">
 			<div class="col-lg-5 col-xs-12">
 				<img src="../assets/shows/acru_sj960.png" class="img-fluid rounded">
@@ -117,7 +120,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="container mt-5 p-3 shows__background rounded contenido__desplazamiento">
+	<div class="container mt-5 p-3 shows__background rounded contenido__desplazamiento" data-aos="fade-left">
 		<div class="row d-flex justify-content-center align-items-center">
 			<div class="col-lg-5 col-xs-12">
 				<img src="../assets/shows/acru_sl960.png" class="img-fluid rounded">
@@ -131,7 +134,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="container mt-5 mb-5 p-3 shows__background rounded contenido__desplazamiento">
+	<div class="container mt-5 mb-5 p-3 shows__background rounded contenido__desplazamiento" data-aos="fade-right">
 		<div class="row d-flex justify-content-center align-items-center">
 			<div class="col-lg-5 col-xs-12">
 				<img src="../assets/shows/acru_sluis960.png" class="img-fluid rounded">
@@ -174,40 +177,14 @@
 		</div>		
 	</div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 	<!-- Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
+	<!-- AOS JS -->
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+	<script>
+  	AOS.init();
+	</script>
 </body>
 </html> 
