arreglando AOS en DISCOGRAFIA

--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -126,9 +126,9 @@
     </div>
 
     <!-- descripcion discos, sencillos y ep -->
-    <div class="container discografia__background rounded" data-aos="fade-right">
+    <div class="container discografia__background rounded">
         <div class="row bB mt-5">
-            <div class="col-lg-3 col-xs-12 p-3 d-flex flex-colum flex-wrap justify-content-center">
+            <div class="col-lg-3 col-xs-12 p-3 d-flex flex-colum flex-wrap justify-content-center" data-aos="fade-right">
                 <img class="rounded sombraCont contenido__img--border img-fluid" src="../assets/discos y sencillos/Anonimato.jpg" alt="#Anonimato">
                 <div class="d-flex flex-column justify-content-center">
                     <h3 class="p-3 disco__discoTitulo--tyf">#Anonimato</h3>
@@ -950,9 +950,9 @@
             </div>
         </div>
     </div>
-    <div class="container discografia__background rounded" data-aos="fade-left">
+    <div class="container discografia__background rounded">
         <div class="row bB mt-5 mb-5">
-            <div class="col-lg-3 col-xs-12 p-3 d-flex flex-colum flex-wrap justify-content-center">
+            <div class="col-lg-3 col-xs-12 p-3 d-flex flex-colum flex-wrap justify-content-center"  data-aos="fade-right">
                 <img class="rounded sombraCont contenido__img--border img-fluid" src="../assets/discos y sencillos/El Origen.jpg" alt="El Origen">
                 <div class="d-flex flex-column justify-content-center">
                     <h3 class="p-3 disco__discoTitulo--tyf">El Origen</h3>
